# glgame

./: README.md
game/: CMakeLists.txt  Justfile  main.cc
game/.cache/clangd/index/: main.cc.82DA004596BE630A.idx
libgfx/: CMakeLists.txt  Justfile  test.cc
libgfx/include/: font.hh  gfx.hh  renderer.hh  texture.hh  types.hh  vec.hh  window.hh
libgfx/include/detail/: circle.hh  detail.hh  line.hh  rectangle.hh  text.hh  texture.hh  triangle.hh
libgfx/shaders/: batched.vert  circle.frag  gen.py  line.vert  rectangle.frag  rectangle.vert  shaders.hh  text.frag  texture.frag  texture.vert  triangle.vert
libgfx/src/: CMakeLists.txt  circle.cc  gfx.cc  line.cc  rectangle.cc  renderer.cc  shaders.hh  text.cc  texture.cc  triangle.cc  types.cc  window.cc
src/: CMakeLists.txt  Justfile  main.cc  shader.frag  shader.vert
src/.cache/clangd/index/: gl.h.0BF6AD0EF4E3EA07.idx  main.cc.A1DFCF13284FAEF4.idx
